# Krea2_ComfyUI_Advanced

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  __init__.py  _compat.py  _gguf_utils.py  _latent_utils.py  _lora_utils.py  _ref_latents.py  _res_solver.py  _settings.py  _sigmas.py  _trigger_words.py  _upscale_vae.py  cond_presets.json  loader_presets.json  lora_presets.json  pyproject.toml  requirements.txt  server.py  sigmas_presets.json  ultra_presets.json
configs/wan21_vae/: config.json
data/: lora_triggers.json
docs/: dev_notes_2026-07-17_lora_stack_and_ref_latents.md  research_2026-07-13_refusal_prompt_vision.md
nodes/: __init__.py  krea2_component_loader.py  krea2_debug.py  krea2_decode.py  krea2_encode.py  krea2_generate.py  krea2_latent_resize.py  krea2_loader.py  krea2_lora.py  krea2_lora_stack.py  krea2_multistage_ultra.py  krea2_multistage_ultra_v2.py  krea2_prompt.py  krea2_ref_latents.py  krea2_resolution.py  krea2_settings.py  krea2_settings_from_image.py  krea2_sigmas.py  krea2_unload.py  krea2_vision_prompt.py
web/js/: krea2_lora_stack.js  krea2_presets.js  krea2_settings_from_image.js  krea2_sigmas_preview.js  krea2_stage_colors.js  krea2_upscale_hints.js
workflows/: README.md
