[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eric_krea2"
version = "1.0.0"
description = "Self-contained ComfyUI custom nodes for Krea 2 (Raw/Turbo): text-to-image, multi-stage high-res, 2x upscale-decode, LoRA stack, conditioning rebalance, and recipe presets."
authors = [{ name = "Eric Hiss" }]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
keywords = ["comfyui", "krea", "krea2", "diffusers", "text-to-image", "flow-matching"]

# Kept in sync with requirements.txt. torch / numpy / Pillow / requests /
# safetensors are provided by ComfyUI and deliberately omitted so this pack
# never reinstalls a mismatched torch.
dependencies = [
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    "transformers>=4.57.0",
]

[project.urls]
Repository = "https://github.com/EricRollei/Eric_Krea2"
"Bug Tracker" = "https://github.com/EricRollei/Eric_Krea2/issues"

# ─────────────────────────────────────────────────────────────────────────
#  ComfyUI Registry metadata (https://registry.comfy.org)
#  Set PublisherId to your registry handle before `comfy node publish`.
# ─────────────────────────────────────────────────────────────────────────
[tool.comfy]
PublisherId = ""
DisplayName = "Eric_Krea2"
Icon = ""

[tool.setuptools]
# This is a ComfyUI node pack loaded by directory, not an importable library;
# no package auto-discovery / installation into site-packages is intended.
py-modules = []
